--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Pig Game</title>
+
+    <
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div class="wrapper clearfix">
@@ -22,7 +25,7 @@
         <div class="player-score" id="score-1">72</div>
         <div class="player-current-box">
           <div class="player-current-label">Current</div>
-          <div class="player-current-score" id="current-1">0</div>
+          <div class="player-current-score" id="current-1">7</div>
         </div>
       </div>
 
