--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <i class="ion-ios-download-outline"></i>Hold
       </button>
 
-      <img src="dice-5.png" alt="Dice" class="dice" />
+      <img src="img/dice-5.JPG" alt="Dice" class="dice" />
     </div>
     <script src="script.js"></script>
   </body>
